refactor: Use a factory to create the GraphBuilder modules.